# sick_visionary_cpp_shared

./: .gitignore  AuthenticationLegacy.cpp  AuthenticationLegacy.h  CMakeLists.txt  CoLa2ProtocolHandler.cpp  CoLa2ProtocolHandler.h  CoLaBCommand.h  CoLaBCommandBuilder.cpp  CoLaBCommandReader.h  CoLaBProtocolHandler.cpp  CoLaBProtocolHandler.h  CoLaCommand.cpp  CoLaCommand.h  CoLaCommandType.h  CoLaError.h  CoLaParameterReader.cpp  CoLaParameterReader.h  CoLaParameterWriter.cpp  CoLaParameterWriter.h  ControlSession.cpp  ControlSession.h  IAuthentication.cpp  IAuthentication.h  IProtocolHandler.cpp  IProtocolHandler.h  ITransport.h  MD5.cpp  Network.cpp  Network.h  PointCloudPlyWriter.cpp  PointCloudPlyWriter.h  PointXYZ.h  TcpSocket.cpp  TcpSocket.h  UdpSocket.cpp  UdpSocket.h  VisionaryAutoIPScan.cpp  VisionaryAutoIPScan.h  VisionaryCommon.vcxproj  VisionaryCommon.vcxproj.filters  (+15 more)
attic/: CoLaBCommand.cpp  CoLaBCommandBuilder.h  CoLaBCommandReader.cpp  CoLaUserLevel.h  MD5.cpp  MD5.h  VisionaryControlOld.cpp  VisionaryControlOld.h
src/sick/visionary/: CoLaBCommand.cpp  CoLaBCommand.h  CoLaBCommandBuilder.cpp  CoLaBCommandBuilder.h  CoLaBCommandReader.cpp  CoLaBCommandReader.h  CoLaUserLevel.h  Network.cpp  Network.h  VisionaryAutoIPScan.cpp  VisionaryAutoIPScan.h  VisionaryControl.cpp  VisionaryControl.h  VisionaryData.cpp  VisionaryData.h  VisionaryDataStream.cpp  VisionaryDataStream.h  VisionaryEndian.h  VisionarySData.cpp  VisionarySData.h  VisionaryTData.cpp  VisionaryTData.h
